--- a/templates/result.html
+++ b/templates/result.html
@@ -1,12 +1,8 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Prediction Result</title>
-</head>
-<body>
-    <h1>Prediction Result</h1>
+{% extends "base.html" %}
+
+{% block content %}
+    <h1>Result</h1>
     <p>Predicted Class: {{ predicted_class }}</p>
     <p>Confidence: {{ "{:.2f}".format(confidence) }}%</p>
     <img src="{{ url_for('static', filename=image_path) }}" alt="Prediction Plot">
-</body>
-</html>
+{% endblock %}
