--- a/templates/cognitive.html
+++ b/templates/cognitive.html
@@ -1,6 +1,43 @@
-{% extends "base.html" %}
-
-{% block content %}
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Cognitive Test</title>
+    <style>
+        body {
+            background-color: black;
+            text-align: center;
+            color: white;
+        }
+        form {
+            display: inline-block;
+            text-align: left;
+        }
+        label {
+            display: block;
+            margin-bottom: 10px;
+        }
+        input[type="text"] {
+            width: 100%;
+            padding: 10px;
+            margin-bottom: 20px;
+            border: none;
+            border-radius: 5px;
+            box-sizing: border-box;
+        }
+        input[type="submit"] {
+            background-color: #4CAF50;
+            color: white;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+        input[type="submit"]:hover {
+            background-color: #3e8e41;
+        }
+    </style>
+</head>
+<body>
     <h1>Cognitive Test</h1>
     <form method="POST">
         <label for="citizenship">Citizenship:</label>
@@ -50,4 +87,5 @@
         <br>
         <input type="submit" value="Submit Answers">
     </form>
-{% endblock %}
+</body>
+</html>
