--- a/templates/result.html
+++ b/templates/result.html
@@ -1,7 +1,15 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h1>Result</h1>
+    <style>
+        body {
+            text-align: center;
+            color: white;
+            background-color: rgb(0, 1, 3);
+        }
+    </style>
+
+    <h1>MRI Result</h1>
     <p>Predicted Class: {{ predicted_class }}</p>
     <p>Confidence: {{ "{:.2f}".format(confidence) }}%</p>
     <img src="{{ url_for('static', filename=image_path) }}" alt="Prediction Plot">
