--- a/templates/home.html
+++ b/templates/home.html
@@ -5,11 +5,11 @@
         /* Custom styling for the image */
         .background-image {
             position: absolute;
-            top: 138px; /* Adjust based on your navbar height */
+            top: 136.5px; /* Adjust based on your navbar height */
             left: 0;
             width: 100%;
             height: calc(100vh - 70px - 1.7cm); /* Adjust for footer height */
-            background-image: url('static/BG.jpg');
+            background-image: url('static/BG1.jpg');
             background-size: cover;
             background-position: center;
         }
