--- a/templates/base.html
+++ b/templates/base.html
@@ -18,6 +18,18 @@
             text-align: center;
         }
         
+        /* Heading Text Effect */
+        header h1 {
+            background-image: url(https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExMnE0YWo0Z3Z3eHY1ajh2ZG9ra3ljNWpsNzE1a3B5cDNucmI4bzZnMyZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/26DMTbt4OhYJQtvq0/giphy.gif);
+            background-size: cover;
+            color: transparent;
+            -moz-background-clip: text;
+            -webkit-background-clip: text;
+            text-transform: uppercase;
+            font-size: 50px;
+            margin: 10px 0;
+        }
+        
         /* Navbar Styling */
         .nav-bar {
             background-color: #2c264efa;
@@ -25,15 +37,28 @@
             padding: 10px;
             text-align: right;
             margin: 0;
+            border-bottom: 1px solid #fff;
         }
         .nav-bar a {
             color: #fff;
             text-decoration: none;
             margin: 0 10px;
-            transition: transform 0.3s ease; /* Hover Animation */
+            position: relative;
+            transition: transform 0.3s ease, border-bottom-width 0.3s ease;
+            padding-bottom: 0.1cm;
         }
-        .nav-bar a:hover {
-            transform: scale(1.1); /* Hover Animation */
+        .nav-bar a::before {
+            content: "";
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            width: 0%;
+            height: 2px;
+            background-color: #fff;
+            transition: width 0.3s ease;
+        }
+        .nav-bar a:hover::before {
+            width: 100%;
         }
 
         /* Footer Styling */
@@ -46,12 +71,13 @@
             bottom: 0;
             width: 100%;
             height: 1.7cm;
+            border-top: 1px solid #fff;
         }
     </style>
 </head>
 <body>
     <header>
-        <h1 style="color: #fff; font-weight: bold;">Alzheimer Detection Using Hybrid Approach</h1>
+        <h1>Alzheimer Detection Using Hybrid Approach</h1>
     </header>
     
     <div class="nav-bar">
