--- a/templates/cognitive.html
+++ b/templates/cognitive.html
@@ -1,3 +1,6 @@
+{% extends "base.html" %}
+
+{% block content %}
 <!DOCTYPE html>
 <html>
 <head>
@@ -7,6 +10,7 @@
             background-color: black;
             text-align: center;
             color: white;
+            margin-bottom: 2.5cm; /* Adjust margin to prevent overlap */
         }
         form {
             display: inline-block;
@@ -39,6 +43,12 @@
 </head>
 <body>
     <h1>Cognitive Test</h1>
+
+    <footer>
+        <p>Alzheimer Detection Using Hybrid Approach</p>
+        <p>AIML, BMSIT&M</p>
+    </footer>
+
     <form method="POST">
         <label for="citizenship">Citizenship:</label>
         <input type="text" id="citizenship" name="citizenship" required>
@@ -89,3 +99,4 @@
     </form>
 </body>
 </html>
+{% endblock %}
