--- a/templates/mri.html
+++ b/templates/mri.html
@@ -16,8 +16,14 @@
 
     /* Styling for the upload label */
     .upload-label {
-        margin-bottom: 20px;
-        font-size: 18px;
+    margin-bottom: 20px;
+    font-size: 18px;
+    transition: color 0.3s ease, font-size 0.3s ease;
+    }
+
+    .upload-label:hover {
+    color: #ebdb07fa;
+    font-size: 20px;
     }
 
     /* Styling for file input */
@@ -72,9 +78,11 @@
         <div class="prediction-result">
             <p>Predicted Class: {{ predicted_class }}</p>
             <p>Confidence: {{ "{:.2f}".format(confidence) }}%</p>
-            <img id="image-preview" src="#" alt="Prediction Plot">
         </div>
     {% endif %}
+    <div class="prediction-result">
+        <img id="image-preview" src="#" alt="Prediction Plot" style="display: none;">
+    </div>
 </div>
 
 <script>
@@ -83,7 +91,9 @@
         if (file) {
             var reader = new FileReader();
             reader.onload = function(e) {
-                document.getElementById('image-preview').src = e.target.result;
+                var imagePreview = document.getElementById('image-preview');
+                imagePreview.src = e.target.result;
+                imagePreview.style.display = 'block';
             };
             reader.readAsDataURL(file);
         }
