--- a/templates/mri.html
+++ b/templates/mri.html
@@ -22,8 +22,9 @@
     }
 
     .upload-label:hover {
-    color: #ebdb07fa;
+    color: #06b0f3fa;
     font-size: 20px;
+    font-weight: 500;
     }
 
     /* Styling for file input */
